--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,6 @@ INCLUDES = -I$(top_builddir)/lib
 aetos_libs = $(top_builddir)/lib
 
 bin_PROGRAMS = aetos
-aetos_SOURCES = main.c options.c event.c modules.c error.c mem.c
+aetos_SOURCES = main.c mem.c event.c modules.c options.c utility.c error.c
 aetos_LDADD = $(aetos_libs)/irc/libirc.a
 aetos_LDFLAGS = `pth-config --libs` `pth-config --ldflags`
