--- a/configure.in
+++ b/configure.in
@@ -3,11 +3,11 @@ dnl m4_include([config/prefix_uscore.m4])dnl
 
 # Process this file with autoconf to produce a configure script
 AC_INIT(Aetos, 0.1a, bugreport@aetos.sourceforge.net)
-AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_SRCDIR([src/main.c])
 
 AM_INIT_AUTOMAKE(aetos,0.1a)
-AM_CONFIG_HEADER([config.h])
+AM_CONFIG_HEADER(config.h)
 
 # Check for programs
 AC_PROG_CC
