--- a/configure.in
+++ b/configure.in
@@ -22,8 +22,7 @@ dnl AC_REPLACE_FUNCS(blaaaaat)
 # Check for header files
 AC_HEADER_STDC
 AC_HEADER_TIME
-AC_CHECK_HEADERS(stdarg.h varargs.h,,dnl
-	AC_MSG_ERROR(variadic functions are necessary in Aetos))
+AC_CHECK_HEADERS(stdarg.h varargs.h)
 AC_CHECK_HEADERS(sys/param.h sys/socket.h)
 
 # Check for structures,typedefs and compiler characteristics
